[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/spritesheets/characters.png" type="Texture" id=2]
[ext_resource path="res://src/actors/players/Player.gd" type="Script" id=3]
[ext_resource path="res://src/state_machine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://src/actors/players/PlayerIdle.gd" type="Script" id=5]
[ext_resource path="res://src/actors/players/PlayerWalk.gd" type="Script" id=6]
[ext_resource path="res://assets/particles/particles.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 11.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "aerial"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "died" ],
"method": "emit_signal"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walking"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.171569, 1 ), -0.00473123, -0.00473123, 0, 0, Vector2( 0.372549, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 15
script = ExtResource( 3 )
max_speed = 250.0
jump_force = 500.0
acceleration = 0.1
ground_friction = 0.2
air_friction = 0.15
dash_speed = 500.0
wall_gravity = 1000.0

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )
flip_h = true
hframes = 9
vframes = 3

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -11.5 )
shape = SubResource( 6 )

[node name="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 2 )
anims/aerial = SubResource( 5 )
anims/dead = SubResource( 7 )
anims/idle = SubResource( 3 )
anims/walking = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]
limit_left = 0
limit_top = 0

[node name="Particles" type="CPUParticles2D" parent="." index="4"]
material = SubResource( 8 )
emitting = false
amount = 20
one_shot = true
explosiveness = 0.9
lifetime_randomness = 0.5
texture = ExtResource( 11 )
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, -10 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 180.0
angular_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 9 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="WallRayCasts" type="Node2D" parent="." index="5"]

[node name="RightWallRayCast1" type="RayCast2D" parent="WallRayCasts" index="0"]
position = Vector2( 6, -15 )
enabled = true
cast_to = Vector2( 9, 0 )

[node name="RightWallRayCast2" type="RayCast2D" parent="WallRayCasts" index="1"]
position = Vector2( 6, -9 )
enabled = true
cast_to = Vector2( 9, 0 )

[node name="LeftWallRayCast1" type="RayCast2D" parent="WallRayCasts" index="2"]
position = Vector2( -6, -15 )
enabled = true
cast_to = Vector2( -9, 0 )

[node name="LeftWallRayCast2" type="RayCast2D" parent="WallRayCasts" index="3"]
position = Vector2( -6, -9 )
enabled = true
cast_to = Vector2( -9, 0 )

[node name="Timers" type="Node" parent="." index="6"]

[node name="DashTimer" type="Timer" parent="Timers" index="0"]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers" index="1"]
wait_time = 0.125
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" index="2"]
wait_time = 0.125
one_shot = true

[node name="CoyoteWallTimer" type="Timer" parent="Timers" index="3"]
wait_time = 0.25
one_shot = true

[node name="StateMachine" type="Node" parent="." index="7"]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )
